lab3/lab3_ingress_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab3-ingress-service
  labels:
    app: lab3
spec:
  type: NodePort
  selector:
    app: lab3
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      nodePort: 32222
