lab3/lab3_ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lab3-ingress
spec:
  tls:
    - hosts:
        - lab3-react.edu
      secretName: lab3-tls
  rules:
    - host: lab3-react.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab3-ingress-service
                port:
                  number: 3000
